--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/56beb4a044.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="open-sans-font-family">
     <header>
@@ -32,11 +36,29 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-style">Download CV</button>
-          <button class="btn-style contact">Contact</button>
+          <button class="btn-style">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+          <button class="btn-style contact">
+            <i class="fa-solid fa-phone"></i> Contact
+          </button>
         </div>
         <img class="banner-img" src="images/hardy.png" alt="" />
       </div>
     </header>
+    <!-- header section completed -->
+    <main>
+      <!-- about me section -->
+      <section class="about-me">
+        <h3 class="about-me-title">About Me</h3>
+        <p class="about-me-para">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
