--- a/index.html
+++ b/index.html
@@ -50,14 +50,34 @@
     <main>
       <!-- about me section -->
       <section class="about-me">
-        <h3 class="about-me-title">About Me</h3>
-        <p class="about-me-para">
-          I, m a designer & developer with a passion for web design. I enjoy
-          developing simple, clean and slick websites that provide real value to
-          the end user. Thousands of clients have procured exceptional resulfs
-          while working with me. Delivering work within time and budget which
-          meets clients requirements in our mata.
-        </p>
+        <div class="about-description">
+          <h3 class="about-me-title">About Me</h3>
+          <p class="about-me-para">
+            I, m a designer & developer with a passion for web design. I enjoy
+            developing simple, clean and slick websites that provide real value
+            to the end user. Thousands of clients have procured exceptional
+            resulfs while working with me. Delivering work within time and
+            budget which meets clients requirements in our mata.
+          </p>
+          <div class="info-container">
+            <div class="info">
+              <h3>Name:</h3>
+              <p>Mary Hardy</p>
+            </div>
+            <div class="info">
+              <h3>Email:</h3>
+              <p>info@gmail.com</p>
+            </div>
+            <div class="info">
+              <h3>Date of birth:</h3>
+              <p>11 November 1987</p>
+            </div>
+            <div class="info">
+              <h3>From:</h3>
+              <p>Los Angeles, USA</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
