--- a/index.html
+++ b/index.html
@@ -129,6 +129,81 @@
           </div>
         </div>
       </section>
+      <!-- resume section -->
+      <section class="resume">
+        <h3 class="resume-heading">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-title">My Education</h3>
+            <div>
+              <h3 class="title">Master in Computer Engineering</h3>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="para">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div>
+              <h3 class="title">Master in Computer Engineering</h3>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="para">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div>
+              <h3 class="title">Master in Computer Engineering</h3>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="para">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-title">My Experience</h3>
+            <div>
+              <h3 class="title">Sr. Font End Developer</h3>
+              <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+              <p class="para">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div>
+              <h3 class="title">Jr. Font End Developer</h3>
+              <h5 class="sub-title">Dribbble Inc / 2018 - 2022</h5>
+              <p class="para">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div>
+              <h3 class="title">HTML Developer</h3>
+              <h5 class="sub-title">Adobe Inc / 2017 - 2018</h5>
+              <p class="para">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="btn-container">
+          <button class="btn-style">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
