--- a/index.html
+++ b/index.html
@@ -205,5 +205,37 @@
         </div>
       </section>
     </main>
+    <!-- main section completed -->
+    <footer>
+      <div class="footer-container">
+        <div class="footer-column">
+          <h3 class="footer-title">Lets Connect</h3>
+          <p class="footer-para">
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <div class="social-icons">
+            <img src="images/icons/facebook.png" alt="" />
+            <img src="images/icons/twitter.png" alt="" />
+            <img src="images/icons/insta.png" alt="" />
+          </div>
+        </div>
+        <div class="footer-column">
+          <h3 class="footer-title">Let’s Message me</h3>
+          <form action="">
+            <input type="text" name="" id="" placeholder="Your name" />
+            <input type="email" name="" id="" placeholder="Your email" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Message"
+            ></textarea>
+            <input type="submit" value="Submit" class="btn-style" />
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
